<resources>
    <string name="app_name">The Movie DB</string>
    <string name="x">X</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="adult">Adult</string>
    <string name="description">Description</string>
    <string name="descriptionDefault">My cool list!</string>
    <string name="list_add">List add</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="list_management">List management</string>
    <string name="create_list">Create List</string>
    <string name="accountButton">Account</string>
    <string name="home">Home</string>

    <string-array name="genres">
            <item>Filters:</item>
            <item>Action</item>
            <item>Comedy</item>
            <item>Drama</item>
            <item>Horror</item>
            <item>Thriller</item>
            <item>Romance</item>
        <item>All Movies</item>
        </string-array>

</resources>